2000-05-09  Oliver Kiddle  <opk@zsh.org>

	* 11284: Completion/Base/_math: use _math to complete the let builtin

	* 11282: Completion/Builtins/_vars_eq: complete using _arguments
	for typeset and its variants

2000-05-09  Tanaka Akira  <akr@zsh.org>

	* 11280: Completion/User/_make: suppress an error with closed stdin
	on OpenBSD.

	* 11278: Completion/User/_ssh: disable forwarding to use ssh.

2000-05-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 11277: Functions/Misc/nslookup: make nslookup function more like
 	real nslookup

2000-05-09  Tanaka Akira  <akr@zsh.org>

	* 11276: configure.in, Src/Modules/zftp.c: fix build on OpenBSD.

2000-05-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 11274: Completion/Builtins/_zstyle, Completion/Core/_main_complete,
 	Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo, Src/Zle/compcore.c,
 	Src/Zle/zle_tricky.c: give control over insertion of tab when no
 	non-blank character before cursor; add insert-tab style
	
	* 11273: Completion/Base/_argument_sets,
 	Completion/Base/_arguments: option name clash in _arguments
	
	* 11272: Completion/Base/_arguments: fix for _arguments without
 	options and no more arguments to complete
	
	* 11270: Doc/Zsh/compsys.yo, Src/Zle/computil.c: new -A and -S
 	options to _arguments; `-opt=-' specs for options whose argument
 	has to come after the `='
	
2000-05-08  Oliver Kiddle  <opk@zsh.org>

	* 11268: Doc/Zsh/compsys.yo, Doc/Zsh/builtins.yo: minor typo fixes

	* unposted: Etc/CONTRIBUTORS fix

2000-05-08  Bart Schaefer  <schaefer@zsh.org>

	* 11264: Doc/Zsh/compat.yo: Missed bit for 10771.

2000-05-08  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11260: Doc/Zsh/options.yo: docs for 11044

	* Hiroki Tamakoshi: 11044: Src/options.c, Src/utils.c, Src/zsh.h: 
	Option to use Dvorak keyboard in spell-checking.

2000-05-08  Geoff Wing  <gcw@zsh.org>

	* gcw: unposted: Etc/CONTRIBUTORS fix

2000-05-08  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11252: Functions/Zftp/zf*: context should be