@@ -1,3 +1,8 @@
+2000-05-09  Peter Stephenson  <pws@cambridgesiliconradio.com>
+
+	* pws: 11285: Src/Modules/zftp.c: move cleanup code to
+	zftp_cleanup() to be called from exit hook.
+
 2000-05-09  Oliver Kiddle  <opk@zsh.org>
 
 	* 11284: Completion/Base/_math: use _math to complete the let builtin
